touch-ups on the list stuff
(bzr r4611)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -90,7 +90,9 @@ EXTRA_DIST =	\
 	utest/test-1ary-cases.h	\
 	algorithms/find-last-if.h \
 	algorithms/longest-common-suffix.h \
+	traits/copy.h	\
 	traits/function.h	\
+	traits/list-copy.h	\
 	traits/reference.h
 
 EXTRA_PROGRAMS =	\
