configure.in -> configure.ac
(bzr r4652)

--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -275,5 +275,5 @@ round_test_LDADD = libinkpost.a
 sp_gradient_test_SOURCES = sp-gradient-test.cpp
 sp_gradient_test_LDADD = $(all_libs) 
 
-inkscape_version.h: ../configure.in
+inkscape_version.h: ../configure.ac
 	echo '#define INKSCAPE_VERSION "$(VERSION)"' > inkscape_version.h
