cleanup: Don't bother listing old object names that are only relevant without subdir-objects automake option.
(bzr r4718)

--- a/src/display/Makefile_insert
+++ b/src/display/Makefile_insert
@@ -11,8 +11,8 @@ display/all: display/libspdisplay.a
 display/clean:
 	rm -f display/libspdisplay.a $(display_libspdisplay_a_OBJECTS)
 
-canvas-arena.$(OBJEXT) display/canvas-arena.$(OBJEXT): helper/sp-marshal.h
-sp-canvas.$(OBJEXT) display/sp-canvas.$(OBJEXT): helper/sp-marshal.h
+display/canvas-arena.$(OBJEXT): helper/sp-marshal.h
+display/sp-canvas.$(OBJEXT): helper/sp-marshal.h
 
 display_libspdisplay_a_SOURCES = \
 	display/nr-arena-forward.h	\
