--- a/Makefile.mingw.common
+++ b/Makefile.mingw.common
@@ -155,7 +155,7 @@ INC = -I. -I.. -I../.. $(GTKINC) -I$(GTK)/include \
 LIBS = $(GTKLIB) -lxml2 \
 $(GTK)/lib/iconv.lib	\
 -lfreetype6.dll -lfontconfig-1.dll -lpng -lpopt $(GTK)/lib/zdll.lib \
--lgc -lgccpp -mwindows -lws2_32 -lintl
+-lgc -mwindows -lws2_32 -lintl
 
 
 #########################################
