This file was removed.
(bzr r4833)

--- a/share/templates/Makefile.am
+++ b/share/templates/Makefile.am
@@ -3,7 +3,6 @@ templatesdir = $(datadir)/inkscape/templates
 
 templates_DATA = \
 	README \
-	default.svg \
-	layers.svg
+	default.svg
 
 EXTRA_DIST = $(templates_DATA)
