Adding gc.o as a dependency for repr-action-test.  This makes it build, but it dies.
(bzr r4969)

--- a/src/xml/Makefile_insert
+++ b/src/xml/Makefile_insert
@@ -34,7 +34,7 @@ xml_libspxml_a_SOURCES =	\
 	xml/sp-repr-attr.h 
 
 xml_repr_action_test_SOURCES = xml/repr-action-test.cpp
-xml_repr_action_test_LDADD = xml/libspxml.a util/libinkutil.a libinkpost.a $(INKSCAPE_LIBS)
+xml_repr_action_test_LDADD = gc.o xml/libspxml.a util/libinkutil.a libinkpost.a $(INKSCAPE_LIBS)
 
 xml_quote_test_SOURCES = xml/quote-test.cpp
 xml_quote_test_LDADD = $(INKSCAPE_LIBS)
