Adding dialog for renaming of layers
(bzr r4981)

--- a/src/dialogs/makefile.msc
+++ b/src/dialogs/makefile.msc
@@ -23,6 +23,7 @@ OBJECTS = \
 	desktop-properties.obj \
 	document-properties.obj \
 	object-properties.obj \
+	layer-properties.obj \
 	item-properties.obj \
 	object-attributes.obj \
 	tool-options.obj \
