--- a/src/dialogs/Makefile_insert
+++ b/src/dialogs/Makefile_insert
@@ -38,6 +38,8 @@ dialogs_libspdialogs_a_SOURCES = \
 	dialogs/in-dt-coordsys.h	\
 	dialogs/item-properties.cpp	\
 	dialogs/item-properties.h	\
+	dialogs/layer-properties.cpp	\
+	dialogs/layer-properties.h	\
 	dialogs/object-attributes.cpp	\
 	dialogs/object-attributes.h	\
 	dialogs/object-properties.cpp	\
